--- a/vues/promotion.html.twig
+++ b/vues/promotion.html.twig
@@ -37,9 +37,9 @@
                             <th>{{ promotion.getEleves|length }}</th>
                             <th style="width:100px; text-align:center;" >
                                   <div class="btn-group" style="width:118px;">
-                                      <a href="promotion/{{ promotion.getId() }}" title="Voir" type="button" style="margin-right:2px; margin-top:0px;" class="btn btn-success btn-flat"><i class="fa fa-eye"></i></a>
-                                      <a href="#" title="Modifier" type="button" style="margin-right:2px;" class="btn btn-warning btn-flat"><i class="fa fa-pencil"></i></a>
-                                      <a href="#" title="Supprimer" type="button" ; style="margin-top:0px;" class="btn btn-danger btn-flat"><i class="fa fa-times"></i></a>
+                                      <a href="{{ path('promotion_', { 'id': promotion.getId() }) }}" title="Voir" type="button" style="margin-right:2px; margin-top:0px;" class="btn btn-success btn-flat"><i class="fa fa-eye"></i></a>
+                                      <a href="{{ path('promotion_edit_', { 'id': promotion.getId() }) }}" title="Modifier" type="button" style="margin-right:2px;" class="btn btn-warning btn-flat"><i class="fa fa-pencil"></i></a>
+                                      <a href="{{ path('promotion_sup_', { 'id': promotion.getId() }) }}" title="Supprimer" type="button" ; style="margin-top:0px;" class="btn btn-danger btn-flat"><i class="fa fa-times"></i></a>
                                   </div>
                             </th>
                           </tr>
