--- a/vues/ajout_competence.html.twig
+++ b/vues/ajout_competence.html.twig
@@ -16,30 +16,67 @@
                 </div><!-- /.box-header -->
                 <div class="box-body">
                   <form role="form" method="POST" action={{ path('competence') }}>
-                    <!-- text input -->
-                    <div class="form-group">
-                      <label>Reference</label>
-                      <input type="text" name="reference" id="reference" class="form-control" placeholder="A.X.X.">
+                    {% if competence is defined %}
+                        <!-- text input -->
+                        <div class="form-group">
+                            <input type="hidden" id="id" name="id" class="form-control" value="{{ competence.getId() }}">
+                            
+                            <label>Reference</label>
+                            <input type="text" name="reference" id="reference" class="form-control" value="{{ competence.getReference() }}">
                       
-                      <label>Libelle</label>
-                      <input type="text" name="libelle" id="libelle "class="form-control" placeholder="Libelle">
+                            <label>Libelle</label>
+                            <input type="text" name="libelle" id="libelle "class="form-control" value="{{ competence.getLibelle() }}">
                       
-                      <label>Description</label>
-                      <input type="text" name="description" id="description" class="form-control" placeholder="Description">
-                    </div>
+                            <label>Description</label>
+                            <input type="text" name="description" id="description" class="form-control" value="{{ competence.getDescription() }}">
+                        </div>
                     
-                    <div class="form-group">
-                      <div class="radio">
-                        <label>
-                          <input type="radio" name="obligatoire" id="obligatoire" value="true" checked>
-                          Obligatoire
-                        </label>
-                        <label>
-                          <input type="radio" name="obligatoire" id="obligatoire" value="false" checked>
-                          Non-obligatoire
-                        </label>      
-                      </div>
-                    </div>
+                        <div class="form-group">
+                            <div class="radio">
+                            <label>
+                                {% if competence.getObligatoire() == true %}
+                                    <input type="radio" name="obligatoire" id="obligatoire" value="true" checked>
+                                {% else %}
+                                    <input type="radio" name="obligatoire" id="obligatoire" value="true">
+                                {% endif %}
+                                Obligatoire
+                            </label>
+                            <label>
+                                {% if competence.getObligatoire() == false %}
+                                    <input type="radio" name="obligatoire" id="obligatoire" value="false" checked>
+                                {% else %}
+                                    <input type="radio" name="obligatoire" id="obligatoire" value="false">
+                                {% endif %}
+                                Non-obligatoire
+                            </label>      
+                            </div>
+                        </div>
+                    {% else %}
+                        <!-- text input -->
+                        <div class="form-group">
+                            <label>Reference</label>
+                            <input type="text" name="reference" id="reference" class="form-control" placeholder="A.X.X.">
+                      
+                            <label>Libelle</label>
+                            <input type="text" name="libelle" id="libelle "class="form-control" placeholder="Libelle">
+                      
+                            <label>Description</label>
+                            <input type="text" name="description" id="description" class="form-control" placeholder="Description">
+                        </div>
+                    
+                        <div class="form-group">
+                            <div class="radio">
+                            <label>
+                                <input type="radio" name="obligatoire" id="obligatoire" value="true">
+                                Obligatoire
+                            </label>
+                            <label>
+                                <input type="radio" name="obligatoire" id="obligatoire" value="false">
+                                Non-obligatoire
+                            </label>      
+                            </div>
+                        </div>
+                    {% endif %}
                     
                     <div class="box-footer">
                         <button type="submit" class="btn btn-primary">Enregistrer</button>
