--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -47,8 +47,8 @@
                             {% if is_granted('ROLE_ELEVE') %}
                                 <th style="width:60px; text-align:center;" >
                                     <div class="btn-group">
-                                        <button type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></button>
-                                        <button type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></button>
+                                        <a href="{{ path('activite_edit_', { 'id' : activite.getId() }) }}" type="button" title="Modifier" class="btn btn-warning btn-flat" style="margin-right:5px;"><i class="fa fa-pencil" style="width:10px;"></i></a>
+                                        <a href="{{ path('activite_sup_', { 'id' : activite.getId() }) }}" type="button" title="Supprimer"  class="btn btn-danger btn-flat"><i class="fa fa-times"></i></a>
                                     </div>
                                 </th>
                             {% endif %}
