--- a/vues/ajout_activite.html.twig
+++ b/vues/ajout_activite.html.twig
@@ -36,7 +36,7 @@
                                 <select class="form-control" name="competences" id="competences">
 
                                     {% for competence in competences %}
-                                        <option value='{{ competence.getId() }}'> {{ competence.getReference()}} - {{competence.getLibelle()}}</option>
+                                        <option value="{{ competence.getId() }}"> {{ competence.getReference()}} - {{competence.getLibelle()}}</option>
                                     {% endfor %}
 
                                 </select>
