--- a/vues/ajout_activite.html.twig
+++ b/vues/ajout_activite.html.twig
@@ -32,7 +32,7 @@
                             <input type="text"  id="libelle" name="libelle" class="form-control" value="{{ activite.getLibelle() }}">
 
                             <div class="form-group">
-                                <label>Competence(s) Associé(s)</label>
+                                <label>Competence(s) Associé(s)</label><br/>
                                     {% for competence in competences %}
                                         <input type="checkbox" name="competences[]" value="{{ competence.getId() }}" /> {{ competence.getReference()}} - {{competence.getLibelle()}}
                                         <br/>
@@ -57,7 +57,7 @@
                             <input type="text"  id="libelle" name="libelle" class="form-control" placeholder="libelle">
 
                             <div class="form-group">
-                                <label>Competence(s) Associé(s)</label>
+                                <label>Competence(s) Associé(s)</label><br/>
 
                                     {% for competence in competences %}
                                         <input type="checkbox" name="competences[]" value="{{ competence.getId() }}" /> {{ competence.getReference()}} - {{competence.getLibelle()}}
