--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -27,9 +27,7 @@
                 <th colspan="55"><span> Situations vécues en Formation </span></th>
             </tr>
             <tr>
-                {% for activite in activites %}
-                    <td></td>
-                {% endfor %}
+                    <td> Activite 1</td>
                 {% for competence in competences %}
                     <td></td>
                 {% endfor %}
