--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -24,7 +24,7 @@
             {% endfor %}
             </tr>
             <tr>
-                <th colspan="55"><span> Situations vécues en Formation </span></th>
+                <th colspan="55"><span style="text-align: center"><h3>Situations vécues en Formation</h3></span></th>
             </tr>
             <tr>
                     <td> Activite 1</td>
