--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -27,7 +27,7 @@
                 <th colspan="55"><span style="text-align: center"><h3><strong>Situations vécues en Formation</strong></h3></span></th>
             </tr>
             <tr>
-                    <td style="padding:"> Activite 1 - La ou je me suis grave amusey posey, dans le ghetto ... dans le ghettooooo !</td>
+                    <td style="padding:5px;"> Activite 1 - La ou je me suis grave amusey posey, dans le ghetto ... dans le ghettooooo !</td>
                 {% for competence in competences %}
                     <td></td>
                 {% endfor %}
