--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -26,12 +26,14 @@
             <tr>
                 <th colspan="55"><span style="text-align: center"><h3><strong>Situations vécues en Formation</strong></h3></span></th>
             </tr>
-            <tr>
-                    <td style="padding:5px;"> Activite 1 - La ou je me suis grave amusey posey, dans le ghetto ... dans le ghettooooo !</td>
-                {% for competence in competences %}
-                    <td></td>
-                {% endfor %}
-            </tr>
+            {% for activite in activites %}
+                <tr>
+                        <td style="padding:5px;">{{ activite.getLibelle() }}</td>
+                    {% for competence in competences %}
+                        <td></td>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
         </table>
     </div>
 </section>
