--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -13,7 +13,7 @@
     <div style="align-content: center;">
         <table border="1">
             <tr>
-                <th></th>
+                <th style="width:auto;"></th>
                 <th colspan="4" style="text-align: center;"> Situations Obligatoires </th>
                 <th colspan="50" style="text-align: center"> Competences mises en oeuvre </th>
             </tr>
