--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -6789,7 +6789,7 @@ button.close {
 }
 /* JDL */
 .tableau-vertical-div{
-  width : auto;
+  width : 70px;
   margin-bottom: 50px !important;
   transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg); /* Safari/Chrome */
@@ -6799,6 +6799,7 @@ button.close {
 }
 .tableau-vertical-th{
   height: 900px;
+  width: auto;
   vertical-align: bottom;
   white-space:nowrap;
   display: table-cell;
