--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -68,7 +68,7 @@
                         </h4>
                         </div>
                         <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
-                        <div class="box-body">//
+                        <div class="box-body">
                             <form role="form" method="POST" action={{ path('utilisateur') }}>
                                 <!-- text input -->
                                 <div class="form-group">
@@ -104,7 +104,7 @@
                         </h4>
                         </div>
                         <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
-                        <div class="box-body">//
+                        <div class="box-body">
                             <form role="form" method="POST" action={{ path('utilisateur') }}>
                                 <!-- text input -->
                                 <div class="form-group">
@@ -190,7 +190,7 @@
                         </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
-                        <div class="box-body">//
+                        <div class="box-body">
                             <form role="form" method="POST" action={{ path('utilisateur') }}>
                                 <!-- text input -->
                                 <div class="form-group">
