--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -16,12 +16,12 @@
                         <div class="panel box box-primary">
                         <div class="box-header with-border">
                             <h4 class="box-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" class="collapsed">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">
                                 Eleve
                                 </a>
                             </h4>
                         </div>
-                             <div id="collapseOne" class="panel-collapse collapse " aria-expanded="false">
+                             <div id="collapseOne" class="panel-collapse collapse " aria-expanded="true">
                                  <div class="box-body">
                                      <form role="form" method="POST" action={{ path('utilisateur') }}>
                                      <!-- text input --><div class="form-group">
@@ -62,12 +62,12 @@
                         <div class="panel box box-danger">
                         <div class="box-header with-border">
                         <h4 class="box-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="true">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="false">
                                 Professeur
                             </a>
                         </h4>
                         </div>
-                        <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                        <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="true" style="height: 0px;">
                         <div class="box-body">
                             <form role="form" method="POST" action={{ path('utilisateur') }}>
                                 <!-- text input -->
@@ -98,12 +98,12 @@
                         <div class="panel box box-danger">
                         <div class="box-header with-border">
                         <h4 class="box-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="true">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="false">
                                 Admin
                             </a>
                         </h4>
                         </div>
-                        <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+                        <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="true" style="height: 0px;">
                         <div class="box-body">
                             <form role="form" method="POST" action={{ path('utilisateur') }}>
                                 <!-- text input -->
