--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -13,12 +13,12 @@
     <div style="align-content: center;">
         <table border="1">
             <tr>
-                <th style="width:500px;"></th>
+                <th></th>
                 <th colspan="4" style="text-align: center;"> Situations Obligatoires </th>
                 <th colspan="50" style="text-align: center"> Competences mises en oeuvre </th>
             </tr>
             <tr>
-                <td style="text-align: center; width:500px; position:absolute;"><strong>Situations professionnelle(intitulé et liste des documents et productions associés)</strong></td>
+                <td style="text-align: center;"><strong>Situations professionnelle(intitulé et liste des documents et productions associés)</strong></td>
             {% for competence in competences %}
                 <td class="tableau-vertical-th"><div class="tableau-vertical-div">{{ competence.getReference() }}-{{ competence.getLibelle() }}</div></td>
             {% endfor %}
