Mod Utilisateur Controller

--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -30,6 +30,9 @@
 
                                              <label>Pseudo</label>
                                              <input type="text" id="username" name="username" class="form-control" value="{{ utilisateur.getUsername() }}">
+                                             
+                                             <label>Mot de Passe</label>
+                                             <input type="password" id="password" name="password" class="form-control" placeholder="password">
 
                                              <label>Nom</label>
                                              <input type="text" id="nom" name="nom" class="form-control" value="{{ utilisateur.getNom() }}">
@@ -77,6 +80,9 @@
 
                                     <label>Pseudo</label>
                                     <input type="text" id="username" name="username" class="form-control" value="{{ utilisateur.getUsername() }}">
+                                    
+                                    <label>Mot de Passe</label>
+                                    <input type="password" id="password" name="password" class="form-control" placeholder="password">
 
                                     <label>Nom</label>
                                     <input type="text" id="nom" name="nom" class="form-control" value="{{ utilisateur.getNom() }}">
@@ -113,6 +119,9 @@
 
                                     <label>Pseudo</label>
                                     <input type="text" id="username" name="username" class="form-control" value="{{ utilisateur.getUsername() }}">
+                                    
+                                    <label>Mot de Passe</label>
+                                    <input type="password" id="password" name="password" class="form-control" placeholder="password">
 
                                     <label>Nom</label>
                                     <input type="text" id="nom" name="nom" class="form-control" value="{{ utilisateur.getNom() }}">
