--- a/vues/ajout_utilisateur.html.twig
+++ b/vues/ajout_utilisateur.html.twig
@@ -32,7 +32,7 @@
                                              <input type="text" id="username" name="username" class="form-control" value="{{ utilisateur.getUsername() }}">
                                              
                                              <label>Mot de Passe</label>
-                                             <input type="password" id="password" name="password" class="form-control" placeholder="password">
+                                             <input type="password" id="password" name="password" class="form-control" >
 
                                              <label>Nom</label>
                                              <input type="text" id="nom" name="nom" class="form-control" value="{{ utilisateur.getNom() }}">
@@ -82,7 +82,7 @@
                                     <input type="text" id="username" name="username" class="form-control" value="{{ utilisateur.getUsername() }}">
                                     
                                     <label>Mot de Passe</label>
-                                    <input type="password" id="password" name="password" class="form-control" placeholder="password">
+                                    <input type="password" id="password" name="password" class="form-control" >
 
                                     <label>Nom</label>
                                     <input type="text" id="nom" name="nom" class="form-control" value="{{ utilisateur.getNom() }}">
@@ -118,10 +118,10 @@
                                     <input type="hidden" id="role" name="role" class="form-control" value="ROLE_ADMIN" >
 
                                     <label>Pseudo</label>
-                                    <input type="text" id="username" name="username" class="form-control" value="{{ utilisateur.getUsername() }}">
+                                    <input type="text" id="username" name="username" class="form-control" value="{{ utilisateur.getUsername() }}" >
                                     
                                     <label>Mot de Passe</label>
-                                    <input type="password" id="password" name="password" class="form-control" placeholder="password">
+                                    <input type="password" id="password" name="password" class="form-control">
 
                                     <label>Nom</label>
                                     <input type="text" id="nom" name="nom" class="form-control" value="{{ utilisateur.getNom() }}">
