--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -46,7 +46,7 @@
                 </tr>
             {% endfor %}
             <tr>
-                <th colspan="55"><span style="text-align: center;"> 2eme Stage</span></th>
+                <th colspan="55"><span style="text-align: center;"><h3><strong> 2eme Stage </strong></h3></span></th>
             </tr>
             {% for activite in activites %}
                 <tr>
