--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -7,7 +7,7 @@
 </head>
 
 {% block content %}
-  <div style="margin-left:15px;">
+  <div style="margin-left:15px; width:5000px;">
     <div style="align-content: center;">
 
         <h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION _______ - TABLEAU DE COMPETENCES</h1>
