--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -7,7 +7,8 @@
 </head>
 
 {% block content %}
-  <div style="margin-left:15px; width:5500px; font-size: 15px;">
+ <body style="width: 5300px;">
+  <div style="margin-left:15px; width:5100px; font-size: 15px;">
     <div style="align-content: center;">
 
         <h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION _______ - TABLEAU DE COMPETENCES</h1>
@@ -64,5 +65,5 @@
         </table>
     </div>
   </div>
-</section>
+</body>
 {% endblock %}
