--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -39,7 +39,7 @@
                         <td>
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
-                                    <div style="background-color: darkred;"></div>
+                                    <span style="background-color: #00a7d0; color: darkred; text-align: center;">X</span>
                                 {% endif %}
                             {% endfor %}
                         </td>
