--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -39,7 +39,7 @@
                         <td>
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
-                                    <span style="background-color: #00a7d0; color: red; margin-left:50px;">X</span>
+                                    <h1 style="margin-left:30px;">X</h1>
                                 {% endif %}
                             {% endfor %}
                         </td>
