--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -13,7 +13,7 @@
 
         <h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION _______ - TABLEAU DE COMPETENCES</h1>
          <div>
-             <h1><span style="margin-right:1500px;">NOM et Prénom du candidat :</span><Strong><span style="text-align: center;">Parcours SLAM</span></Strong> <span style="float:right; margin-left:1500px;">N° du candidat :</span></h1>
+             <h1><span style="margin-right:1500px;">NOM et Prénom du candidat :</span><Strong><span style="text-align: center;">Parcours SLAM</span></Strong> <span style="float:right; margin-right:500px;">N° du candidat :</span></h1>
          </div>
     </div>
     <div style="align-content: center;">
