--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -24,7 +24,7 @@
                 <th colspan="50" style="text-align: center"> Competences mises en oeuvre </th>
             </tr>
             <tr>
-                <td style="text-align: center;"><strong>Situations professionnelle(intitulé et liste des documents et productions associés)</strong></td>
+                <td style="text-align: center;"><strong><br>Situations professionnelle</br><br>(intitulé et liste des documents et productions associés)</br> </strong></td>
             {% for competence in competences %}
                 <td class="tableau-vertical-th"><div class="tableau-vertical-div">{{ competence.getReference() }}-{{ competence.getLibelle() }}</div></td>
             {% endfor %}
