--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -41,8 +41,9 @@
                                     <td style="background-color: darkred;">
                                         <h1 style="margin-left:23px; color:white;">X</h1>
                                     </td>
+                                {% else %}
+                                    <td></td>
                                 {% endif %}
-                                <td></td>
                             {% endfor %}
                     {% endfor %}
                 </tr>
